--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="idCardGroup1" class="card mb-3" style="max-width: 20rem;">
           <div class="row g-0">
             <div class="col-md-2">
+              <img src="./assets/img/red-circle.png" class="img-fluid rounded-start">
             </div>
             <div class="col-md-10">
               <div class="card-body">
@@ -35,6 +36,7 @@
         <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
           <div class="row g-0">
             <div class="col-md-2">
+              <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
             </div>
             <div class="col-md-10">
               <div class="card-body">
@@ -51,6 +53,7 @@
         <div id="idCardGroup3" class="card mb-3" style="max-width: 20rem;">
           <div class="row g-0">
             <div class="col-md-2">
+              <img src="./assets/img/blue-circle.png" class="img-fluid rounded-start">
             </div>
             <div class="col-md-10">
               <div class="card-body">
