--- a/index.html
+++ b/index.html
@@ -65,67 +65,61 @@
         </div>
       </div>
     </section>
-
-
-
-<section class="gradient-custom-5">
-  <div class="container py-5">
-    <div class="main-timeline-5">
-
-      <div class="timeline-5 right-5">
-        <div class="card">
-          <div class="card-body p-4">
-            <h5>Title of section 1</h5>
-            <span class="small text-muted"><i class="fas fa-clock me-1"></i>21 March, 2020</span>
-            <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque
-              diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis
-              sagittis ligula in sodales vehicula....</p>
-          </div>
+<!--
+    <section>
+      <div style="display:flex">
+        <div class="range">
+          <div class="line"></div>
+          <div class="circle"></div>
         </div>
       </div>
-
-      <div class="timeline-5 right-5">
-        <div class="card">
-          <div class="card-body p-4">
-            <h5>Title of section 2</h5>
-            <span class="small text-muted"><i class="fas fa-clock me-1"></i>5 April, 2020</span>
-            <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam
-              non nisi semper.</p>
-            <p class="mb-0">Libero expedita explicabo eius fugiat quia aspernatur autem laudantium error
-              architecto recusandae natus sapiente sit nam eaque, consectetur porro molestiae ipsam! Deleniti.
-            </p>
+    </section>
+-->
+<!--
+<section>
+  <div style="display:flex;">
+    <div class="range">
+      <div class="line"></h1></div>
+      <div class="circle"></div>
+    </div>
+    <div style="height:100px;">
+      <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
+        <div class="row g-0">
+          <div class="col-md-2">
+            <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
           </div>
-        </div>
-      </div>
-      <div class="timeline-5 right-5">
-        <div class="card">
-          <div class="card-body p-4">
-            <h5>Title of section 3</h5>
-            <span class="small text-muted"><i class="fas fa-clock me-1"></i>18 August, 2020</span>
-            <p class="mt-2 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque
-              diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis
-              sagittis ligula in sodales vehicula....</p>
-          </div>
-        </div>
-      </div>
-      <div class="timeline-5 right-5">
-        <div class="card">
-          <div class="card-body p-4">
-            <h5>Title of section 4</h5>
-            <span class="small text-muted"><i class="fas fa-clock me-1"></i>10 October, 2020</span>
-            <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam
-              non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis
-              ligula in sodales vehicula....</p>
-            <p class="mb-0">Voluptatibus temporibus esse illum eum aspernatur, fugiat suscipit natus! Eum
-              corporis illum nihil officiis tempore. Excepturi illo natus libero sit doloremque, laborum
-              molestias rerum pariatur quam ipsam necessitatibus incidunt, explicabo.</p>
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">En esta sección</h5>
+              <p class="card-text">Encontrarás otros personajes significativos</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="range">
+      <div class="line"></h1></div>
+      <div class="circle"></div>
+    </div>
+      <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
+        <div class="row g-0">
+          <div class="col-md-2">
+            <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
+          </div>
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">En esta sección</h5>
+              <p class="card-text">Encontrarás otros personajes significativos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    
   </div>
 </section>
-
+-->
   </main>
 
   <script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
