--- a/index.html
+++ b/index.html
@@ -14,112 +14,129 @@
     </header>
 
     <section>
-      <div id="idGroup1" class="row">
-        <div><span id="idSpanGroup1" data-group="1" data-range="1,5">1 - 5</span></div>
-        <div id="idCardGroup1" class="card mb-3" style="max-width: 20rem;">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img src="./assets/img/red-circle.png" class="img-fluid rounded-start">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">En esta sección</h5>
-                <p class="card-text">Encontrarás información sobre los personajes más populares de las películas.</p>
-              </div>
-            </div>
+      <div>
+        <div class="d-flex mt-5">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="d-inline-block" style="height: 50%;"></div>
+            <span id="idSpanGroup1" data-group="1" data-range="1,5">01 - 05</span>
+            <div class="d-inline-block" style="height: 50%;"></div>
           </div>
-        </div>
-      </div>
 
-      <div id="idGroup2" class="row">
-        <div><span id="idSpanGroup2" data-group="2" data-range="6,10">6 - 10</span></div>
-        <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">En esta sección</h5>
-                <p class="card-text">Encontrarás otros personajes significativos</p>
+          <div class="d-flex flex-column justify-content-between ms-3">
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+            <div class="circulo1"></div>
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+          </div>
+          <div id="idGroup1" class="row card3-per-row d-flex">
+             <div id="idCardGroup1" class="card ms-3 mb-2" style="width: 21rem; height: 9rem;">
+              <div class="row g-0">
+                <div class="col-2">
+                  <img src="./assets/img/red-circle.png" class="img-fluid rounded-start">
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">En esta sección</h5>
+                    <p class="card-text">Encontrarás información sobre los personajes más populares de las películas.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div id="idGroup3" class="row">
-        <div><span id="idSpanGroup3" data-group="3" data-range="11,15">11 - 15</span></div>
-        <div id="idCardGroup3" class="card mb-3" style="max-width: 20rem;">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img src="./assets/img/blue-circle.png" class="img-fluid rounded-start">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">En esta sección</h5>
-                <p class="card-text">Encontrarás información sobre personajes secundarios importantes</p>
+        <div class="d-flex">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="d-inline-block" style="height: 50%;"></div>
+            <span id="idSpanGroup2" data-group="2" data-range="6,10">06 - 10</span>
+            <div class="d-inline-block" style="height: 50%;"></div>
+          </div>
+
+          <div class="d-flex flex-column justify-content-between ms-3">
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+            <div class="circulo1"></div>
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+          </div>
+
+          <div id="idGroup2" class="row card3-per-row d-flex">
+             <div id="idCardGroup2" class="card ms-3 mb-3" style="width: 21rem; height: 7rem;">
+              <div class="row g-0">
+                <div class="col-2">
+                  <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">En esta sección</h5>
+                    <p class="card-text">Encontrarás otros personajes significativos</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="d-flex">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="d-inline-block" style="height: 50%;"></div>
+            <span id="idSpanGroup3" data-group="3" data-range="11,15">11 - 15</span>
+            <div class="d-inline-block" style="height: 50%;"></div>
+          </div>
+
+          <div class="d-flex flex-column justify-content-between ms-3">
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+            <div class="circulo1"></div>
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+          </div>
+
+          <div id="idGroup3" class="row card3-per-row d-flex">
+             <div id="idCardGroup3" class="card ms-3 mb-3" style="width: 21rem; height: 8rem;">
+              <div class="row g-0">
+                <div class="col-2">
+                  <img src="./assets/img/blue-circle.png" class="img-fluid rounded-start">
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">En esta sección</h5>
+                    <p class="card-text">Encontrarás información sobre personajes secundarios importantes</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="d-inline-block" style="height: 50%;"></div>
+            <span id="idSpanGroup4" data-group="4" data-range="16,20">16 - 20</span>
+            <div class="d-inline-block" style="height: 50%;"></div>
+          </div>
+
+          <div class="d-flex flex-column justify-content-between ms-3">
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+            <div class="circulo1"></div>
+            <div class="vr d-inline-block mx-auto" style="height: 50%;"></div>
+          </div>
+
+          <div id="idGroup4" class="row card3-per-row d-flex">
+             <div id="idCardGroup4" class="card ms-3 mb-3" style="width: 21rem; height: 8rem;">
+              <div class="row g-0">
+                <div class="col-2">
+                  <img src="./assets/img/yellow-circle.png" class="img-fluid rounded-start">
+                </div>
+                <div class="col-10">
+                  <div class="card-body">
+                    <h5 class="card-title">En esta sección</h5>
+                    <p class="card-text">Encontrarás otros personajes</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
-<!--
-    <section>
-      <div style="display:flex">
-        <div class="range">
-          <div class="line"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-    </section>
--->
-<!--
-<section>
-  <div style="display:flex;">
-    <div class="range">
-      <div class="line"></h1></div>
-      <div class="circle"></div>
-    </div>
-    <div style="height:100px;">
-      <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
-        <div class="row g-0">
-          <div class="col-md-2">
-            <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
-          </div>
-          <div class="col-md-10">
-            <div class="card-body">
-              <h5 class="card-title">En esta sección</h5>
-              <p class="card-text">Encontrarás otros personajes significativos</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="range">
-      <div class="line"></h1></div>
-      <div class="circle"></div>
-    </div>
-      <div id="idCardGroup2" class="card mb-3" style="max-width: 20rem;">
-        <div class="row g-0">
-          <div class="col-md-2">
-            <img src="./assets/img/green-circle.png" class="img-fluid rounded-start">
-          </div>
-          <div class="col-md-10">
-            <div class="card-body">
-              <h5 class="card-title">En esta sección</h5>
-              <p class="card-text">Encontrarás otros personajes significativos</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    
-  </div>
-</section>
--->
   </main>
 
   <script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
